# graphix

./: .envrc  ACKNOWLEDGMENTS.md  CHANGELOG.md  CMakeLists.txt  PROJECT  README.md  xmake.lua
examples/: astar_example.cpp  bellman_ford_example.cpp  bfs_example.cpp  centrality_example.cpp  compare_optimizers.cpp  cycle_detection_example.cpp  dijkstra_example.cpp  farmtrax_compatible.cpp  farmtrax_compatible.cpp.bak  full_features.cpp  graph_properties_example.cpp  graph_transformations_example.cpp  graph_views_example.cpp  main.cpp  property_map_example.cpp  robust_slam_example.cpp  se2_slam_2d.cpp  serialization_example.cpp  simple_graph.cpp  strongly_connected_components_example.cpp  topological_sort_example.cpp  vec3_slam_2d.cpp
include/graphix/: kernel.hpp  simple.hpp  smallvec.hpp  store.hpp  types.hpp
include/graphix/factor/: factor.hpp  graph.hpp  loss_function.hpp  types.hpp  values.hpp
include/graphix/factor/linear/: gaussian_factor.hpp  matrix.hpp
include/graphix/factor/nonlinear/: between_factor.hpp  gauss_newton.hpp  gradient_descent.hpp  levenberg_marquardt.hpp  nonlinear_factor.hpp  optimizer_adapter.hpp  prior_factor.hpp  se2_between_factor.hpp  se2_prior_factor.hpp  vec3_between_factor.hpp  vec3_prior_factor.hpp
include/graphix/factor/types/: vec3d.hpp
include/graphix/vertex/: graph.hpp  property_map.hpp
include/graphix/vertex/algorithms/: astar.hpp  bellman_ford.hpp  bfs.hpp  centrality.hpp  connected_components.hpp  cycle_detection.hpp  dfs.hpp  dijkstra.hpp  graph_properties.hpp  graph_transformations.hpp  graph_views.hpp  mst.hpp  strongly_connected_components.hpp  topological_sort.hpp
include/graphix/vertice/: graph.hpp
src/graphix/: graphix.cpp  kernel.cpp  simple.cpp
src/graphix/factor/: factor.cpp  gradient_descent.cpp  graph.cpp  values.cpp
src/graphix/factor/linear/: gaussian_factor.cpp  matrix.cpp
src/graphix/factor/nonlinear/: gauss_newton.cpp  levenberg_marquardt.cpp  nonlinear_factor.cpp  vec3_between_factor.cpp  vec3_prior_factor.cpp
src/graphix/vertex/: graph.cpp
src/graphix/vertex/algorithms/: dijkstra.cpp
src/graphix/vertice/: graph.cpp
test/: doctest.cpp  graph_test.cpp  test_astar.cpp  test_bellman_ford.cpp  test_bfs.cpp  test_centrality.cpp  test_connected_components.cpp  test_cycle_detection.cpp  test_dfs.cpp  test_directed_graph.cpp  test_graph_copy.cpp  test_graph_properties.cpp  test_graph_serialization.cpp  test_graph_transformations.cpp  test_graph_views.cpp  test_id.cpp  test_key.cpp  test_mst.cpp  test_property_map.cpp  test_smallvec.cpp  test_store.cpp  test_strongly_connected_components.cpp  test_symbol.cpp  test_topological_sort.cpp  test_vertex_graph.cpp
test/factor/: test_factor.cpp  test_gradient_descent.cpp  test_graph.cpp  test_loss_functions.cpp  test_nonlinear_factor.cpp  test_se2_factors.cpp  test_values.cpp  test_vec3_factors.cpp
test/factor/linear/: test_gaussian_factor.cpp  test_matrix.cpp
test/factor/types/: test_vec3d.cpp
